--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "get-port": "^7.1.0",
     "glob": "^11.0.0",
     "helmet": "^7.1.0",
+    "inngest": "^3.22.5",
     "input-otp": "^1.2.4",
     "intl-parse-accept-language": "^1.0.0",
     "isbot": "^5.1.13",
